2006-08-14  Christian Persch  <chpe@cvs.gnome.org>

	* src/fe-gnome/main-window.c:
	- Use HIG shortcut key for Help. Bug #350919.

Sun Aug 13 19:14:03 PDT 2006  David Trowbridge <trowbrds@gmail.com>

	A plugins/perl/CVS:
	A plugins/perl/CVS/Repository:
	A plugins/perl/CVS/Root:
	A plugins/perl/CVS/Entries:
	* plugins/perl/Xchat.pm:
	* plugins/perl/generate_header:
	* plugins/perl/perl.c:
	* plugins/perl/xchat2-perl.html:
	  - Update the perl plugin from xchat CVS, and add the CVS directory
	    so we can update more easily in the future. (#349063)

Sun Aug 13 16:41:11 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/main-window.c:
	   - Add a trailing ellipsis in the "Connect" menu entry (#350944)

Tue Aug  1 11:05:51 PDT 2006  David Trowbridge <trowbrds@gmail.com>

	* po/en_GB.po:
	* po/nb.po:
	* po/el.po:
	* po/de.po:
	  - Update from rosetta

Tue Aug  1 13:16:14 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/main-window.c:
	  - Fix yet another compilation error. Add a missing variable declaration.

2006-07-29  Christian Persch  <chpe@cvs.gnome.org>

	* src/fe-gnome/Makefile.am:
	* src/fe-gnome/channel-list.c: (create_channel_list):
	* src/fe-gnome/connect-dialog.c: (connect_dialog_init):
	* src/fe-gnome/dcc-window.c: (dcc_window_init):
	* src/fe-gnome/find-bar.c: (find_bar_init):
	* src/fe-gnome/gui.c: (initialize_gui_1):
	* src/fe-gnome/irc-network-editor.c: (irc_network_editor_init):
	* src/fe-gnome/main-window.c: (initialize_main_window):
	* src/fe-gnome/pixmaps.c: (pixbuf_new_from_file), (pixmaps_init):
	* src/fe-gnome/preferences-dialog.c: (preferences_dialog_init):
	* src/fe-gnome/preferences-page-colors.c: (preferences_page_colors_new):
	* src/fe-gnome/preferences-page-dcc.c: (preferences_page_dcc_new):
	* src/fe-gnome/preferences-page-effects.c: (preferences_page_effects_new):
	* src/fe-gnome/preferences-page-irc.c: (preferences_page_irc_new):
	* src/fe-gnome/preferences-page-networks.c: (preferences_page_networks_new):